# Librarymgmt

./:  .cmake  # Library Management System Makefile.mak  # Library Management System.md  #ifndef LIBRARY_H.cpp  #include "library.c  Cargo.toml  build.bat  build_and_deploy.sh  build_and_test.bat  index.js  library.db  run_tests.sh  setup_dev_environment.sh  test_build.sh
build_scripts/: build_for_windows.sh  test_on_linux.sh
installer/: library_setup.nsi  setup.nsi
src/: config.rs  data_processor.rs  database.rs  gui.rs  library_service.rs  main.rs  models.rs
